--- a/.github/workflows/ytl.yml
+++ b/.github/workflows/ytl.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Commit and push YouTube playlist (YT_playlist.m3u)
       env:
-        TOKEN: ${{ secrets.TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
