--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -33,42 +33,43 @@ jobs:
         python -m pip install --upgrade pip
         pip install yt_dlp
 
-    - name: Run YT_get_YouTube_link.py
+    - name: Run YT_get_YouTube_link.py (save as YT_playlist_YT.m3u)
       run: |
         python YT_get_YouTube_link.py
+        mv YT_playlist.m3u YT_playlist_YT.m3u
 
-    - name: Run YTC_get_YouTube_link.py
+    - name: Run YTC_get_YouTube_link.py (save as YT_playlist_YTC.m3u)
       run: |
         python YTC_get_YouTube_link.py
+        mv YT_playlist_YTC.m3u YT_playlist_YTC.m3u  # ensure filename consistent
 
-    - name: Combine results into final YT_playlist.m3u
+    - name: Merge playlists into final YT_playlist.m3u
       run: |
-        if [ -f YT_playlist.m3u ] && [ -f YT_playlist_YTC.m3u ]; then
-          # Keep header only once
-          head -n 1 YT_playlist.m3u > YT_playlist_combined.m3u
-          tail -n +2 YT_playlist.m3u >> YT_playlist_combined.m3u
-          tail -n +2 YT_playlist_YTC.m3u >> YT_playlist_combined.m3u
-          mv YT_playlist_combined.m3u YT_playlist.m3u
-        elif [ -f YT_playlist.m3u ]; then
-          echo "Only YT_playlist.m3u found, using it."
+        if [ -f YT_playlist_YT.m3u ] && [ -f YT_playlist_YTC.m3u ]; then
+          head -n 1 YT_playlist_YT.m3u > YT_playlist.m3u
+          tail -n +2 YT_playlist_YT.m3u >> YT_playlist.m3u
+          tail -n +2 YT_playlist_YTC.m3u >> YT_playlist.m3u
+        elif [ -f YT_playlist_YT.m3u ]; then
+          cp YT_playlist_YT.m3u YT_playlist.m3u
         elif [ -f YT_playlist_YTC.m3u ]; then
-          mv YT_playlist_YTC.m3u YT_playlist.m3u
+          cp YT_playlist_YTC.m3u YT_playlist.m3u
         else
           echo "No playlist files found!"
           exit 1
         fi
 
-    - name: Commit and push YouTube playlist (YT_playlist.m3u)
+    - name: Commit and push playlists
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         
-        git add YT_playlist.m3u
+        git add YT_playlist.m3u YT_playlist_YT.m3u YT_playlist_YTC.m3u
         if git diff --cached --quiet; then
-            echo "No changes to YT_playlist.m3u"
+            echo "No changes to playlists"
         else
-            git commit -m "Update YouTube playlist ($(date '+%Y-%m-%d %H:%M:%S'))"
+            git commit -m "Update YouTube playlists ($(date '+%Y-%m-%d %H:%M:%S'))"
             git push
         fi
+        
