--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install yt_dlp
+        pip install -U yt-dlp
 
     - name: Run YT_get_YouTube_link.py (save as YT_playlist_YT.m3u)
       run: |
